readability fixes

--- a/css/code.css
+++ b/css/code.css
@@ -14,7 +14,7 @@ pre {
     overflow-x: auto;
     overflow: auto;
     border: none;
-    font-size: 1.05em;
+    font-size: 1.0rem;
     margin: 10px 0;
 }
 
