--- a/css/home.css
+++ b/css/home.css
@@ -10,18 +10,19 @@ body {
 }
 
 .header {
-    margin: 20px 25px;
+    margin-top: 15px;
+    margin-bottom: 55px;
 }
 
 .header a {
     color: rgba(0, 0, 0, 0.70);
 }
 
-.header h3 {
+.header h2 {
     color: rgba(0, 0, 0, 0.65);
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI SemiLight", "Roboto", Helvetica, sans-serif;
     margin: 0px 5px;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI SemiLight", "Open Sans Light", Verdana, Arial, Helvetica, sans-serif;
 }
 
 .mobile-header {
@@ -29,14 +30,15 @@ body {
 }
 
 .selected-header {
-    border-bottom-width: 2px;
+    border-bottom-width: 3px;
     border-bottom-style: solid;
-    padding-bottom: 4px;
+    padding-bottom: 5px;
 }
 
 .post-title {
     margin-top: 0;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    font-size: 1.7rem;
 }
 
 .portrait-image {
@@ -74,8 +76,7 @@ body {
 }
 
 .post {
-    margin-top: 30px;
-    margin-bottom: 40px;
+    margin-bottom: 45px;
 }
 
 .pic {
